<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_gray"
    tools:context=".features.login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:textAlignment="center"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/appbar_menu"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/qscore" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/loginMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/login"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/login_error"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/email_layout"
                app:layout_constraintStart_toStartOf="@+id/email_layout"
                app:layout_constraintTop_toBottomOf="@+id/loginMessage" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/hint_email"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/errorText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/hint_password"
                app:counterEnabled="true"
                app:endIconMode="password_toggle"
                app:helperText="@string/helper_password"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:enabled="false"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="@+id/fbLogin"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/fbLogin"
                app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

            <Button
                android:id="@+id/forgotPassword"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/goto_forgot"
                app:layout_constraintEnd_toEndOf="@+id/login"
                app:layout_constraintStart_toStartOf="@+id/login"
                app:layout_constraintTop_toBottomOf="@+id/password_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fbLogin"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ripple_rounded_rectangle_blue"
                android:clickable="true"
                android:elevation="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/password_layout"
                app:layout_constraintStart_toStartOf="@+id/password_layout"
                app:layout_constraintTop_toBottomOf="@+id/login">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="start|center"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/facebook_f"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:gravity="center|start"
                    android:text="@string/continue_with_facebook"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/googleLogin"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_rectangle_button_white"
                android:clickable="true"
                android:elevation="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/fbLogin"
                app:layout_constraintStart_toStartOf="@+id/fbLogin"
                app:layout_constraintTop_toBottomOf="@+id/fbLogin">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="24dp"
                    android:layout_height="0dp"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/ic_google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:gravity="center|start"
                    android:text="@string/continue_with_google"
                    android:textColor="@color/raisin"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/gotoSignUpText"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/goto_sign_up"
                app:layout_constraintEnd_toEndOf="@+id/googleLogin"
                app:layout_constraintStart_toStartOf="@+id/googleLogin"
                app:layout_constraintTop_toBottomOf="@+id/googleLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
